<resources>
    <string name="app_name">PythonGuru</string>
    <string name="newUsername">username</string>
    <string name="registerButton">Register !</string>
    <string name="newPasssword">passsword</string>
    <string name="registerFormTitle">Register to PythonGuru</string>
    <string name="loginButton">Login !</string>
    <string name="usernameField">username</string>
    <string name="passswordField">passsword</string>
    <string name="loginFormTitle">Not a member? Register Now!</string>
    <string name="anotherLoginText">Login to PythonGuru</string>
    <string name="mainMenuTitle">PythonGuru Main Menu</string>
    <string name="lessonsButton">Lessons</string>
    <string name="progressButton">Progress</string>
    <string name="testsButton">Tests</string>
    <string name="profileButton">Reset Password</string>
    <string name="loginFormTitleText">Login to PythonGuru</string>
    <string name="linkToRegisterForm">Not a member ? Register Now !</string>
    <string name="submitButton">Submit</string>
    <string name="passwordFieldText">password</string>
    <string name="welcomeText">Welcome</string>
    <string name="change_username">Change username</string>
    <string name="your_profile">Change your password</string>
    <string name="change_password">Change password</string>
    <string name="tests">Tests</string>
    <string name="test_1">Test 1</string>
    <string name="test_2">Test 2</string>
    <string name="test_3">Test 3</string>
    <string name="test_4">Test 4</string>
    <string name="test_5">Test 5</string>
    <string name="test_6">Test 6</string>
    <string name="final_test">Final Test</string>
    <string name="lessons">Lessons</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_4">Lesson 4</string>
    <string name="lesson_5">Lesson 5</string>
    <string name="lesson_6">Lesson 6</string>
    <string name="your_progress">Your Progress</string>
    <string name="mark_1">Test 1:</string>
    <string name="mark_2">Test 2:</string>
    <string name="mark_3">Test 3:</string>
    <string name="mark_4">Test 4:</string>
    <string name="mark_5">Test 5:</string>
    <string name="mark_6">Test 6:</string>
    <string name="mark_7">Final Test:</string>
    <string name="comment_1">Comment:</string>
    <string name="comment_2">Comment:</string>
    <string name="comment_3">Comment:</string>
    <string name="comment_4">Comment:</string>
    <string name="comment_5">Comment:</string>
    <string name="comment_6">Comment:</string>
    <string name="comment_7">Comment:</string>
    <string name="comment3">Comment:</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="marksColText">marks</string>
    <string name="lesson_4_txt">Lesson 4</string>
    <string name="lesson_3_txt">Lesson 3</string>
    <string name="curr_esson_txt">Lesson</string>
    <string name="visits_txt">visits:</string>
    <string name="quiz_number_txt">Quiz</string>
    <string name="q1">TextView</string>
    <string name="ans1">RadioButton</string>
    <string name="ans2">RadioButton</string>
    <string name="ans3">RadioButton</string>
    <string name="your_final_quiz">Your Final Quiz!</string>
    <string name="finished_quiz">done</string>
    <string name="finished_final_quiz">done</string>
    <string name="choose_txt">Choose yout answer</string>
    <string name="faq_1">What\'s this app?</string>
    <string name="a_1">This is a learning app.</string>
    <string name="faq_2">What\'s the purpose of that app?</string>
    <string name="a_2">It\'s purpuse is to learn / learn better the basics of Python.</string>
    <string name="faq_txt">Frequently Asked Questions F.A.Qs</string>
    <string name="faq_3">What is Python?</string>
    <string name="a_3">It\'s a programming language aimed to build anything you like in a simple way.</string>
    <string name="faq_4">What will i gain from learning Python through this app?</string>
    <string name="a_4">You will know many different tricks about the basics of Python language.</string>
    <string name="faq_5">Is this a free app?</string>
    <string name="a_5">Yep, is a FREE and there isn\'t any premium content.</string>
    <string name="faq_6">Does this app contains ads?</string>
    <string name="a_6">No there aren\'t any ads.</string>
    <string name="help_button">Help ?</string>
    <string name="logout_btn">logout</string>
    <string name="teacher_login_txt">Are you a teacher ? Login here !</string>
    <string name="teacher_login_to_pyguru">Login to PyGuru as a teacher</string>
    <string name="teacherName">username</string>
    <string name="teacher_register_to_pyguru">Register to PyGuru (Teacher)</string>
    <string name="teacher_register">Register</string>
    <string name="new_teacher_name">username</string>
    <string name="new_teacher_pwd">password</string>
    <string name="teacher_logout">logout</string>
    <string name="teacher_main_menu">Teacher\'s Main Menu</string>
    <string name="teacher_welcome">Welcome</string>
    <string name="reset_teacher_password">Reset Password</string>
    <string name="add_question">Add question</string>
    <string name="teacher_change_password">Change your password (Teacher)</string>
    <string name="teacher_repeat_password">Repeat Password</string>
    <string name="teacher_new_password">New Password</string>
    <string name="add_new_question_form">Add new question</string>
    <string name="question_body_field">Question body</string>
    <string name="quiz_no">Quiz</string>
    <string name="which_answer_is_correct">Which answer is correct</string>
    <string name="answers_txts">Answers</string>
    <string name="add_question_btn_txt">Add</string>
    <string name="forgot_password_txt">Forgot Password</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="username_fpwd">username</string>
    <string name="button_fpwd">Change Password</string>
    <string name="new_pasword_fpwd">new password</string>
    <string name="question_type_txt">Question Type</string>
    <string name="back_btn2">Back</string>
    <string name="back_btn1">Back</string>
    <string name="back_text">Back</string>
</resources>
