<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HelpActivity" android:background="@color/colorPrimaryDark">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="364dp"
            android:layout_height="716dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView130"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView129"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView128"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView127"/>
        <TextView
                android:text="@string/faq_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/faqs" android:textColor="@android:color/white"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView125"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView126"/>
        <TextView
                android:text="@string/faq_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/faq1" android:textColor="@android:color/white"/>
        <TextView
                android:text="@string/a_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/a_1"
                android:background="@color/colorPrimary"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView133"/>
        <TextView
                android:text="@string/faq_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/faq2" android:textColor="@android:color/white"/>
        <TextView
                android:text="@string/a_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/a_2" android:background="@color/colorPrimary"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView136"/>
        <TextView
                android:text="@string/faq_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/faq3" android:textColor="@android:color/white"/>
        <TextView
                android:text="@string/a_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/a_3" android:background="@color/colorPrimary"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView139"/>
        <TextView
                android:text="@string/faq_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/faq4" android:textColor="@android:color/white"/>
        <TextView
                android:text="@string/a_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/a_4" android:background="@color/colorPrimary"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView142"/>
        <TextView
                android:text="@string/faq_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/faq5" android:textColor="@android:color/white"/>
        <TextView
                android:text="@string/a_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/a_5" android:background="@color/colorPrimary"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView145"/>
        <TextView
                android:text="@string/faq_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/faq6" android:textColor="@android:color/white"/>
        <TextView
                android:text="@string/a_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView147"
                android:background="@color/colorPrimary"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>