<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TeacherMenuActivity" android:background="@color/colorPrimaryDark">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/teacher_main_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView182"
                android:textColor="@android:color/white"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView185"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView186"/>
        <TextView
                android:text="@string/teacher_welcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/teacher_welcome"
                android:textColor="@android:color/white"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView190"/>
        <Button
                android:text="@string/add_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/add_question_btn"
                android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView188"/>
        <Button
                android:text="@string/reset_teacher_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/reset_teacher_pwd"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView189"/>
        <Button
                android:text="@string/teacher_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/teacher_logout"
                android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>